--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Nabeel Siddiqui
 cv: passive
 notes: passive
 contact: passive
-description: Kushagra Mishra is a Software Engineer and Researcher living and studying at NCSU in Raleigh, NC, USA.
+description: Nabeel Siddiqui is a Software Development Engineer II at SAP and a seasoned researcher in the field of IoT, Machine Learning and Blockchain.
 ---
 <!-- <div class="jumbotron"> -->
 <div class="row">
