--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ description: Nabeel Siddiqui is a Software Development Engineer II at SAP and a 
 	</div>
 	</div>
 	<div class="col-sm-8">
-	<p class="lead">Hi, I'm <span itemprop="name">Kush</span>, currently a Graduate Student @NCSU majoring in Computer Science & Software Engineer Intern @VT iDirect.
+	<p class="lead">Hi, I'm <span itemprop="name">Nabeel</span>, currently Software Development Engineer II at SAP.
 	</p>
 
-	<p> Systems and Networking enthusiast, aspiring to build and optimize large scale distributed systems.
+	<p> .
 	    I currently focus on building software for satellite communication hub.
 		</p>
 		<p>
