--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ description: Nabeel Siddiqui is a Software Development Engineer II at SAP and a 
 	<div align="center" class="col-sm-4">
 	<img  class="img-rounded avatar" alt="Kushagra Mishra" src="img/profile.jpg">
 	<div class="row">
-		<a target="_blank" class="col-sm-3" href="http://github.com/kkushagra"><i class="fa fa-github fa-2x"></i></a>
-		<a target="_blank" class="col-sm-3" href="https://twitter.com/kushssj"><i class="fa fa-twitter fa-2x"></i></a>
-		<a target="_blank" class="col-sm-3" href="http://www.linkedin.com/in/mishrakushagra/"><i class="fa fa-linkedin fa-2x"></i></a>
-		<a target="_blank" class="col-sm-3" href="https://www.facebook.com/kushagra.om"><i class="fa fa-facebook-square fa-2x"></i></a>
+		<a target="_blank" class="col-sm-3" href="http://github.com/mnscodes"><i class="fa fa-github fa-2x"></i></a>
+		<a target="_blank" class="col-sm-3" href="https://twitter.com/nabeel1591"><i class="fa fa-twitter fa-2x"></i></a>
+		<a target="_blank" class="col-sm-3" href="http://www.linkedin.com/in/mdnabeelsiddiqui/"><i class="fa fa-linkedin fa-2x"></i></a>
+		<a target="_blank" class="col-sm-3" href="https://www.facebook.com/nabeelsiddiqui111"><i class="fa fa-facebook-square fa-2x"></i></a>
 	</div>
 	</div>
 	<div class="col-sm-8">
