--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@ description: Nabeel Siddiqui is a Software Development Engineer II at SAP and a 
 	<div class="col-sm-8">
 	<p class="lead">Hi, I'm <span itemprop="name">Nabeel</span>, currently Software Development Engineer II at SAP.
 	</p>
+		Nabeel Siddiqui is working as a Developer at SAP. His experience includes working as a Research Associate in Department of Computer Science at M.S. Ramaiah Institute of Technology, Bangalore. 
+Nabeel received his Bachelor of Engineering in Computer Science from M.S. Ramaiah Institute of Technology. As a student in college he worked on projects involving interoperability between software and hardware. During his final year he invented- A system and method to monitor real time predictions in weather conditions using sensor integrated cloud based internet of things (IoT) with a generic web based API (Application Programming Interface).  
+Nabeel is a frequent contributor in various technical conferences. His paper titled ParaSense - A Sensor Integrated Internet of things Prototype for Real Time Monitoring Applications got accepted by IEEE Technical Symposium. He showcased his invention at the finale of a national event” Innovation Jockey” to an audience of vastly experienced professionals and entrepreneurs from all over India. Nabeel was honored with “Gold Medal” and the title of “Application Developer” by Association of Computer Science. He also won the “Best Project Award” in college for his end to end solution for cross platform weather nowcasting application KGSAN.
+
 
 	<p> .
-	    I currently focus on building software for satellite communication hub.
-		</p>
-		<p>
-	    My research interest spans across various domains like distributed systems, cloud computing and internet of things.
+	   
 	</p>
 <!-- 	<p>
 	 My learnings have been captured in the book titled -  <a href="/book">
