--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ description: Nabeel Siddiqui is a Software Development Engineer II at SAP and a 
 	</div>
 	</div>
 	<div class="col-sm-8">
-	<p class="lead">Hi, I'm <span itemprop="name">Nabeel</span>, currently Software Development Engineer II at SAP.
+	<p class="lead">Hi, I'm <span itemprop="name">Nabeel</span>, currently working as Software Development Engineer II at SAP.
 	</p>
 		Nabeel Siddiqui is working as a Developer at SAP. His experience includes working as a Research Associate in Department of Computer Science at M.S. Ramaiah Institute of Technology, Bangalore. 
 Nabeel received his Bachelor of Engineering in Computer Science from M.S. Ramaiah Institute of Technology. As a student in college he worked on projects involving interoperability between software and hardware. During his final year he invented- A system and method to monitor real time predictions in weather conditions using sensor integrated cloud based internet of things (IoT) with a generic web based API (Application Programming Interface).  
