--- a/cv/index.html
+++ b/cv/index.html
@@ -9,7 +9,7 @@ contact: passive
 description: Current CV for Anil Kumar Muppalla, a Researcher, Web and Mobile Developer, Author.
 ---
 <div class="cv">
-	<a target = "_blank" href="/files/AnilMuppallaCV.pdf" class="btn btn-default pull-right" title="Download CV as PDF">Download CV</a>
+	<a target = "_blank" href="/files/NabeelSiddiqui_RESUME.pdf" class="btn btn-default pull-right" title="Download CV as PDF">Download CV</a>
 				<div itemscope itemtype="http://data-vocabulary.org/Person">
 				<h3>Contact</h3>
 				<address>
