--- a/book/index.html
+++ b/book/index.html
@@ -7,7 +7,7 @@ notes: passive
 contact: passive
 description: Anil Kumar Muppalla is a Researcher, Web and Mobile Developer, Music Enthusiast living and working in Bangalore, India.
 ---
-<!-- <div class="jumbotron"> -->
+<div class="jumbotron"> 
 <div class="row">
 	<div class="col-sm-5">
 	<img alt="Anil Kumar Muppalla" src="/img/book.png">
@@ -59,4 +59,4 @@ description: Anil Kumar Muppalla is a Researcher, Web and Mobile Developer, Musi
 
 	</div>
 </div>
-<!-- </div> -->
+</div>
