--- a/book/index.html
+++ b/book/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Anil Muppalla
+title: Nabeel Siddiqui
 book: active
 cv: passive
 notes: passive
 contact: passive
-description: Anil Kumar Muppalla is a Researcher, Web and Mobile Developer, Music Enthusiast living and working in Bangalore, India.
+description: Nabeel Siddiqui is a Researcher, Web and Mobile Developer, Music Enthusiast living and working in Bangalore, India.
 ---
 <div class="jumbotron"> 
 <div class="row">
