--- a/index.html
+++ b/index.html
@@ -20,11 +20,27 @@ description: Nabeel Siddiqui is a Software Development Engineer II at SAP and a 
 	<div class="col-sm-8">
 	<p class="lead">Hi, I'm <span itemprop="name">Nabeel</span>, currently working as Software Development Engineer II at SAP.
 	</p>
-		Nabeel Siddiqui is working as a Developer at SAP. His experience includes working as a Research Associate in Department of Computer Science at M.S. Ramaiah Institute of Technology, Bangalore. 
-Nabeel received his Bachelor of Engineering in Computer Science from M.S. Ramaiah Institute of Technology. As a student in college he worked on projects involving interoperability between software and hardware. During his final year he invented- A system and method to monitor real time predictions in weather conditions using sensor integrated cloud based internet of things (IoT) with a generic web based API (Application Programming Interface).  
-Nabeel is a frequent contributor in various technical conferences. His paper titled ParaSense - A Sensor Integrated Internet of things Prototype for Real Time Monitoring Applications got accepted by IEEE Technical Symposium. He showcased his invention at the finale of a national event” Innovation Jockey” to an audience of vastly experienced professionals and entrepreneurs from all over India. Nabeel was honored with “Gold Medal” and the title of “Application Developer” by Association of Computer Science. He also won the “Best Project Award” in college for his end to end solution for cross platform weather nowcasting application KGSAN.
-
-
+		Background
+Nabeel Siddiqui is a Master of Engineering Management Candidate at Duke University. He is specializing in Product Management. Prior to joining Duke Nabeel worked at SAP in the Research and Development department. He was part of the Predictive Engineering Insights team and they developed digital twin and simulation as a service for Oil & Gas, Wind, and Chemical Energy Industries. Nabeel has also worked in the development and strategy team of HCM Suite Page Builder at SAP. He led a team in technical capacity and catered to high-value clients across the globe.
+Skill Highlights
+1. Problem Solving - Nabeel is an expert in problem-solving and he deploys design thinking and divide and conquer approaches to address a complex issue into simple tasks.
+2. Product Management- Nabeel has experience in driving ideas to products. He has worked in multiple projects from their inception and used mind mapping, design thinking, User Experience, User Interviews, and advanced development methodologies to deliver a profitable product.
+3. Innovation- Nabeel was featured in "Innovator @ SAP" annual video series for his contribution to the Internet of Things, Machine Learning, Analytics in terms of Patents and Technical journals. He has authored books and book chapters on these topics and loves to share his expertise in Tech Talks.
+4. Technical Development- Nabeel is an avid coder and he is proficient in JavaScript, Python, Java and has worked extensively on SAP's UI5 framework to create world-class products with more than 500,000 user bases. He has also designed scalable product architectures using Kafka, AWS, Azure and is an advocate of multi-cloud architecture.
+5. Management- Nabeel possess exceptional management skills like planning, communication, decision making and forecasting the strategy to launch the product.
+Timeline of Achievements
+2013 - WINNER global hackathon organized by PESIT for custom-built cloud hosting service Read more at: https://www.deccanherald.com/content/360690/bright-ideas-spring-forth.html
+2014 – Best PROJECT award for his invention KGSAN – A system and method to
+monitor real time predictions in weather conditions using sensor integrated cloud-based
+internet of things (IoT) with a generic web-based API (Application Programming Interface). Indian Patent 2271/CHE/2014
+2014 – Top 6 Innovative ideas in INDIA by Yahoo Innovation Jockey – A National level competition aimed at finding solutions that solves a real problem.
+2015 – WINNER global hackathon organized by SAP Walldorf for creating a tokenization concept to reduce queues at the cafeteria.
+    
+2016 – Excellence at Innovation - Awarded Excellence @ Innovation at SAP Labs India for developing an end to end application "HooP" to map street kids to a learning objective using sports as a medium. #socialchange
+2017 – Innovator @ SAP - Felicitated with Innovator @ SAP for ongoing research and contributions to technology by authoring books, designing scalable solutions and mentoring developers to deliver next gen solutions.
+2018 - Member of Editorial Board - Honored to be inducted in the board of technical review for International Journal of Wireless Networks and Broadband Technologies.
+2019 – Top 50 Tech Visionaries – Awarded Top 50 Tech Visionaries by Intercon for my achievements.
+ 
 	<p> .
 	   
 	</p>
