--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Nabeel Siddiqui
 cv: passive
 notes: passive
 contact: passive
-description: Nabeel Siddiqui is a Software Development Engineer II at SAP and a seasoned researcher in the field of IoT, Machine Learning and Blockchain.
+description: Nabeel Siddiqui is a Master of Engineering Management candidate at Duke University. His passion includes creating and managing Successful and Challenging Products.
 ---
 <!-- <div class="jumbotron"> -->
 <div class="row">
@@ -20,7 +20,7 @@ description: Nabeel Siddiqui is a Software Development Engineer II at SAP and a 
 	<div class="col-sm-8">
 	<p class="lead">Hi, I'm <span itemprop="name">Nabeel</span>, currently working as Software Development Engineer II at SAP.
 	</p>
-		Background
+		<b> Background </b> <br>
 Nabeel Siddiqui is a Master of Engineering Management Candidate at Duke University. He is specializing in Product Management. Prior to joining Duke Nabeel worked at SAP in the Research and Development department. He was part of the Predictive Engineering Insights team and they developed digital twin and simulation as a service for Oil & Gas, Wind, and Chemical Energy Industries. Nabeel has also worked in the development and strategy team of HCM Suite Page Builder at SAP. He led a team in technical capacity and catered to high-value clients across the globe.
 Skill Highlights
 1. Problem Solving - Nabeel is an expert in problem-solving and he deploys design thinking and divide and conquer approaches to address a complex issue into simple tasks.
