--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ description: Nabeel Siddiqui is a Master of Engineering Management candidate at 
 	</div>
 	</div>
 	<div class="col-sm-8">
-	<p class="lead">Hi, I'm <span itemprop="name">Nabeel</span>, currently working as Software Development Engineer II at SAP.
+	<p class="lead">Hi, I'm <span itemprop="name">Nabeel</span>, pursuing Master of Engineering Management and specializing in Product Management at Duke University.
 	</p>
 		<b> Background </b> <br><br>
 Nabeel Siddiqui is a Master of Engineering Management Candidate at Duke University. He is specializing in Product Management. Prior to joining Duke Nabeel worked at SAP in the Research and Development department. He was part of the Predictive Engineering Insights team and they developed digital twin and simulation as a service for Oil & Gas, Wind, and Chemical Energy Industries. Nabeel has also worked in the development and strategy team of HCM Suite Page Builder at SAP. He led a team in technical capacity and catered to high-value clients across the globe.<br>
