--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@ Nabeel Siddiqui is a Master of Engineering Management Candidate at Duke Universi
 	<li><b>Management</b>- Nabeel possess exceptional management skills like planning, communication, decision making and forecasting the strategy to launch the product.</li></ol>
 		<br> <b> Timeline of Achievements </b> <br>
 		<ul type = "square">
-<li> 2013 - WINNER global hackathon organized by PESIT for custom-built cloud hosting service Read more at: https://www.deccanherald.com/content/360690/bright-ideas-spring-forth.html </li>
-<li> 2014 – Best PROJECT award for his invention KGSAN – A system and method to
+			<li> <b> 2013 </b> - WINNER global hackathon organized by PESIT for custom-built cloud hosting service Read more at: https://www.deccanherald.com/content/360690/bright-ideas-spring-forth.html </li>
+			<li> <b>2014 </b> – Best PROJECT award for his invention KGSAN – A system and method to
 	monitor real time predictions in weather conditions using sensor integrated cloud-based 
 internet of things (IoT) with a generic web-based API (Application Programming Interface). Indian Patent 2271/CHE/2014</li>
-<li> 2014 – Top 6 Innovative ideas in INDIA by Yahoo Innovation Jockey – A National level competition aimed at finding solutions that solves a real problem.</li>
-<li> 2015 – WINNER global hackathon organized by SAP Walldorf for creating a tokenization concept to reduce queues at the cafeteria.</li>
+			<li> <b> 2014 </b>– Top 6 Innovative ideas in INDIA by Yahoo Innovation Jockey – A National level competition aimed at finding solutions that solves a real problem.</li>
+			<li> <b> 2015 </b> – WINNER global hackathon organized by SAP Walldorf for creating a tokenization concept to reduce queues at the cafeteria.</li>
     
-<li> 2016 – Excellence at Innovation - Awarded Excellence @ Innovation at SAP Labs India for developing an end to end application "HooP" to map street kids to a learning objective using sports as a medium. #socialchange </li>
-<li> 2017 – Innovator @ SAP - Felicitated with Innovator @ SAP for ongoing research and contributions to technology by authoring books, designing scalable solutions and mentoring developers to deliver next gen solutions.</li>
-<li> 2018 - Member of Editorial Board - Honored to be inducted in the board of technical review for International Journal of Wireless Networks and Broadband Technologies.</li>
-<li> 2019 – Top 50 Tech Visionaries – Awarded Top 50 Tech Visionaries by Intercon for my achievements.</li></ul>
+			<li> <b> 2016 </b> – Excellence at Innovation - Awarded Excellence @ Innovation at SAP Labs India for developing an end to end application "HooP" to map street kids to a learning objective using sports as a medium. #socialchange </li>
+			<li> <b> 2017 </b> – Innovator @ SAP - Felicitated with Innovator @ SAP for ongoing research and contributions to technology by authoring books, designing scalable solutions and mentoring developers to deliver next gen solutions.</li>
+			<li><b> 2018 </b> - Member of Editorial Board - Honored to be inducted in the board of technical review for International Journal of Wireless Networks and Broadband Technologies.</li>
+			<li> <b> 2019 </b>– Top 50 Tech Visionaries – Awarded Top 50 Tech Visionaries by Intercon for my achievements.</li></ul>
  
 	<p> .
 	   
