--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ description: Nabeel Siddiqui is a Master of Engineering Management candidate at 
 ---
 <!-- <div class="jumbotron"> -->
 <div class="row">
-	<div align="center" class="col-sm-4">
+	<div align="left" class="col-sm-4">
 	<img  class="img-rounded avatar" alt="Nabeel Siddiqui" src="img/profile.jpg">
 	<div class="row">
 		<a target="_blank" class="col-sm-3" href="http://github.com/mnscodes"><i class="fa fa-github fa-2x"></i></a>
