--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ description: Nabeel Siddiqui is a Master of Engineering Management candidate at 
 		<a target="_blank" class="col-sm-3" href="https://www.facebook.com/nabeelsiddiqui111"><i class="fa fa-facebook-square fa-2x"></i></a>
 	</div>
 	</div>
-	<div class="col-sm-8">
+	<div class="col-sm-8" text-align="justify">
 	<p class="lead">Hi, I'm <span itemprop="name">Nabeel</span>, pursuing Master of Engineering Management and specializing in Product Management at Duke University.
 	</p>
 		<p>
