--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Nabeel Siddiqui is a Master of Engineering Management Candidate at Duke Universi
 	<li><b>Product Management</b>- Nabeel has experience in driving ideas to products. He has worked in multiple projects from their inception and used mind mapping, design thinking, User Experience, User Interviews, and advanced development methodologies to deliver a profitable product.</li>
 	<li><b>Innovation</b>- Nabeel was featured in "Innovator @ SAP" annual video series for his contribution to the Internet of Things, Machine Learning, Analytics in terms of Patents and Technical journals. He has authored books and book chapters on these topics and loves to share his expertise in Tech Talks.</li>
 	<li><b>Technical Development</b>- Nabeel is an avid coder and he is proficient in JavaScript, Python, Java and has worked extensively on SAP's UI5 framework to create world-class products with more than 500,000 user bases. He has also designed scalable product architectures using Kafka, AWS, Azure and is an advocate of multi-cloud architecture.</li>
-	<li><b>Management</b>- Nabeel possess exceptional management skills like planning, communication, decision making and forecasting the strategy to launch the product.</li></ol>
+	<li><b>Management</b>- Nabeel possesses exceptional management skills like planning, communication, decision making and forecasting the strategy to launch the product.</li></ol>
 		<br> <b> Timeline of Achievements </b> <br>
 		<ul type = "square">
 			<li> <b> 2013 </b> - WINNER global hackathon organized by PESIT for custom-built cloud hosting service Read more at: https://www.deccanherald.com/content/360690/bright-ideas-spring-forth.html </li>
