--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ description: Nabeel Siddiqui is a Master of Engineering Management candidate at 
 		<a target="_blank" class="col-sm-3" href="https://twitter.com/nabeel1591"><i class="fa fa-twitter fa-2x"></i></a>
 		<a target="_blank" class="col-sm-3" href="http://www.linkedin.com/in/mdnabeelsiddiqui/"><i class="fa fa-linkedin fa-2x"></i></a>
 		<a target="_blank" class="col-sm-3" href="https://www.facebook.com/nabeelsiddiqui111"><i class="fa fa-facebook-square fa-2x"></i></a><br><br>
-		<iframe width="250" height="250" src="https://youtu.be/zq5XH1Y2hRo"> </iframe>
+		<iframe width="250" height="250" src="https://www.youtube.com/watch?v=zq5XH1Y2hRo&feature=youtu.be"> </iframe>
 	</div>
 	</div>
 	<div class="col-sm-8" text-align="justify">
