--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ description: Nabeel Siddiqui is a Master of Engineering Management candidate at 
 		<a target="_blank" class="col-sm-3" href="http://www.linkedin.com/in/mdnabeelsiddiqui/"><i class="fa fa-linkedin fa-2x"></i></a>
 		<a target="_blank" class="col-sm-3" href="https://www.facebook.com/nabeelsiddiqui111"><i class="fa fa-facebook-square fa-2x"></i></a><br><br>
 		<iframe width="250" height="250" src="https://www.youtube.com/embed/zq5XH1Y2hRo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+		<p> Featured in SAP's Innovator of the Year Video, 2017"</p>
 	</div>
 	</div>
 	<div class="col-sm-8" text-align="justify">
