--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Nabeel Siddiqui is a Master of Engineering Management Candidate at Duke Universi
 	<li><b>Management</b>- Nabeel possesses exceptional management skills and has led teams in technical capacity to deliver user features in a timely and strategic manner. The key to his success was planning, communication, decision making and forecasting the release strategy to launch the product</li></ol>
 		<br> <b> Timeline of Achievements </b> <br>
 		<ul type = "square">
-			<li> <b> 2013 </b> - WINNER global hackathon organized by PESIT for custom-built cloud hosting service Read more at: https://www.deccanherald.com/content/360690/bright-ideas-spring-forth.html </li>
+			<li> <b> 2013 </b> - WINNER global hackathon organized by PESIT for custom-built cloud hosting service Read more at: <a href="https://www.deccanherald.com/content/360690/bright-ideas-spring-forth.html">Deccan Herald Article</a> </li>
 			<li> <b>2014 </b> – Best PROJECT award for his invention KGSAN – A system and method to
 	monitor real time predictions in weather conditions using sensor integrated cloud-based 
 internet of things (IoT) with a generic web-based API (Application Programming Interface). Indian Patent 2271/CHE/2014</li>
