--- a/book/index.html
+++ b/book/index.html
@@ -2,7 +2,7 @@
 <div class="jumbotron"> 
 <div class="row">
 	<div class="col-sm-5">
-	<img alt="Anil Kumar Muppalla" src="/img/book.png">
+	<img alt="Anil Kumar Muppalla" src="/img/book.jpg">
 	<div class="row"> 
 		<a class="col-sm-12" target = "_blank" href="https://www.amazon.in/NoSQL-Cloud-Agile-Assimilation-Decision/dp/3330025697"></i> Amazon</a>
 	</div>
@@ -18,7 +18,7 @@
 </div>
 <div class="row">
 	<div class="col-sm-5">
-	<img alt="Anil Kumar Muppalla" src="/img/book.png">
+	<img alt="Anil Kumar Muppalla" src="/img/book.jpg">
 	<div class="row"> 
 		<a class="col-sm-12" target = "_blank" href="http://www.springer.com/in/book/9783319134963#aboutBook"> <i class="fa fa-shopping-cart fa-2x"></i> Springer</a>
 		<a class="col-sm-12" target = "_blank" href="http://www.amazon.com/Guide-High-Performance-Distributed-Computing/dp/3319134965/ref=sr_1_1?s=books&ie=UTF8&qid=1433497044&sr=1-1&refinements=p_27%3AAnil+Kumar+Muppalla&pebp=1433497050089&perid=16Y5DEJ06N3DVBMYCCMY"> <i class="fa fa-shopping-cart fa-2x"></i> Amazon</a>
@@ -35,7 +35,7 @@
 </div>
 <div class="row">
 	<div class="col-sm-5">
-	<img alt="Anil Kumar Muppalla" src="/img/book.png">
+	<img alt="Anil Kumar Muppalla" src="/img/book.jpg">
 	<div class="row"> 
 		<a class="col-sm-12" target = "_blank" href="http://www.springer.com/in/book/9783319134963#aboutBook"> <i class="fa fa-shopping-cart fa-2x"></i> Springer</a>
 		<a class="col-sm-12" target = "_blank" href="http://www.amazon.com/Guide-High-Performance-Distributed-Computing/dp/3319134965/ref=sr_1_1?s=books&ie=UTF8&qid=1433497044&sr=1-1&refinements=p_27%3AAnil+Kumar+Muppalla&pebp=1433497050089&perid=16Y5DEJ06N3DVBMYCCMY"> <i class="fa fa-shopping-cart fa-2x"></i> Amazon</a>
