--- a/book/index.html
+++ b/book/index.html
@@ -8,11 +8,11 @@
 	</div>
 	</div>
 	<div class="col-sm-7">
-	<p> This book provides a guide to the distributed computing technologies of Hadoop and Spark, from the perspective of industry practitioners.</p>
+	<p> This book provides a guide to NoSQL, Cloud and Agile Assimilation Engineering Best Practices.</p>
 
-	<p> <strong> Features:</strong> describes the fundamentals of building scalable software systems for large-scale data processing in the new paradigm of high performance distributed computing; presents an overview of the Hadoop and Spark ecosystem, followed by step-by-step instruction on their installation, programming and execution; Reviews the basics of Spark, including resilient distributed datasets, and examines Hadoop streaming and working with Scalding; Provides detailed case studies on approaches to clustering, data classification and regression analysis; Explains the process of creating a working recommender system using Scalding and Spark. </p>
+	<p> <strong> Features:</strong> The handbook reviews the paradigm of NoSQL Data Storage, Cloud Computing & Agile Development. Its goal is to leverage guidance to researchers and practitioners, helping them select the best-fit data store, identifying challenges & opportunities of the trending assimilated paradigm.</p>
 
-	<p>Supplies working <a target = "_blank" href="https://github.com/4ni1/hpdc-scalding-spark">source code</a> to aid understanding through step-by-step implementation</p>
+	
 
 	</div>
 </div>
