--- a/book/index.html
+++ b/book/index.html
@@ -10,7 +10,7 @@
 	<div class="col-sm-7">
 	<p> This book provides a guide to NoSQL, Cloud and Agile Assimilation Engineering Best Practices.</p>
 
-	<p> <strong> Features:</strong> The handbook reviews the paradigm of NoSQL Data Storage, Cloud Computing & Agile Development. Its goal is to leverage guidance to researchers and practitioners, helping them select the best-fit data store, identifying challenges & opportunities of the trending assimilated paradigm.</p>
+	<p> <strong> About:</strong> The handbook reviews the paradigm of NoSQL Data Storage, Cloud Computing & Agile Development. Its goal is to leverage guidance to researchers and practitioners, helping them select the best-fit data store, identifying challenges & opportunities of the trending assimilated paradigm.</p>
 
 	
 
@@ -27,7 +27,7 @@
 	<div class="col-sm-7">
 	<p> A Sensor Integrated Cloud Based Internet of Things Prototype for Real Time Monitoring Applications. </p>
 
-	<p> <strong> Features:</strong> This paper provides a detailed run down of my invention - The PARASENSE architecture which integrates WSN with Internet of Things. Using the PARASENSE architecture, a set of real time applications can be deployed, some of them are illustrated in this paper.</p>
+	<p> <strong> About:</strong> This paper provides a detailed run down of my invention - The PARASENSE architecture which integrates WSN with Internet of Things. Using the PARASENSE architecture, a set of real time applications can be deployed, some of them are illustrated in this paper.</p>
 
 	
 
