--- a/book/index.html
+++ b/book/index.html
@@ -35,16 +35,16 @@
 </div>
 <div class="row">
 	<div class="col-sm-5">
-	<img alt="Anil Kumar Muppalla" src="/img/book.jpg">
+	<img alt="Anil Kumar Muppalla" src="/img/book2.png">
 	<div class="row"> 
 		
-		<a class="col-sm-12" target = "_blank" href="http://www.amazon.com/Guide-High-Performance-Distributed-Computing/dp/3319134965/ref=sr_1_1?s=books&ie=UTF8&qid=1433497044&sr=1-1&refinements=p_27%3AAnil+Kumar+Muppalla&pebp=1433497050089&perid=16Y5DEJ06N3DVBMYCCMY"> <i class="fa fa-shopping-cart fa-2x"></i> Amazon</a>
+		<a class="col-sm-12" target = "_blank" href="https://www.igi-global.com/article/microsense/175347"></i> IGI Global Journal</a>
 	</div>
 	</div>
 	<div class="col-sm-7">
-	<p> This book provides a guide to the distributed computing technologies of Hadoop and Spark, from the perspective of industry practitioners.</p>
+	<p> Sensor Framework for IoT System-on-Chip</p>
 
-	<p> <strong> Features:</strong> describes the fundamentals of building scalable software systems for large-scale data processing in the new paradigm of high performance distributed computing; presents an overview of the Hadoop and Spark ecosystem, followed by step-by-step instruction on their installation, programming and execution; Reviews the basics of Spark, including resilient distributed datasets, and examines Hadoop streaming and working with Scalding; Provides detailed case studies on approaches to clustering, data classification and regression analysis; Explains the process of creating a working recommender system using Scalding and Spark. </p>
+	<p> <strong> About:</strong> With the advancement of portable devices and sensors, there has been a need to build a universal framework, which can serve as a nodal point to aggregate data from different kinds of devices and sensors. We propose a unified framework that will provide a robust set of guidelines for sensors with varied degree of complexities connected to common set of System-on-Chip (SoC). These will help to monitor, control and visualize real time data coming from different type of sensors connected to these SoCs. We have defined a set of APIs, which will help the sensors to register with the server. These APIs will be the standard to which the sensors will comply while streaming data when connected to the client platforms. </p>
 
 	
 
