--- a/book/index.html
+++ b/book/index.html
@@ -2,7 +2,7 @@
 <div class="jumbotron"> 
 <div class="row">
 	<div class="col-sm-5">
-	<img alt="Anil Kumar Muppalla" src="/img/book.jpg">
+	<img alt="Nabeel Siddiqui" src="/img/book.jpg">
 	<div class="row"> 
 		<a class="col-sm-12" target = "_blank" href="https://www.amazon.in/NoSQL-Cloud-Agile-Assimilation-Decision/dp/3330025697"></i> Amazon</a>
 	</div>
@@ -18,7 +18,7 @@
 </div>
 <div class="row">
 	<div class="col-sm-5">
-	<img alt="Anil Kumar Muppalla" src="/img/book1.png">
+	<img alt="Nabeel Siddiqui" src="/img/book1.png">
 	<div class="row"> 
 		
 		<a class="col-sm-12" target = "_blank" href="https://ieeexplore.ieee.org/document/7166236?reload=true&arnumber=7166236"></i> IEEE Explore Parasense</a>
@@ -35,7 +35,7 @@
 </div>
 <div class="row">
 	<div class="col-sm-5">
-	<img alt="Anil Kumar Muppalla" src="/img/book2.png">
+	<img alt="Nabeel Siddiqui" src="/img/book2.png">
 	<div class="row"> 
 		
 		<a class="col-sm-12" target = "_blank" href="https://www.igi-global.com/article/microsense/175347"></i> IGI Global Journal</a>
