--- a/book/index.html
+++ b/book/index.html
@@ -64,6 +64,86 @@
 	<p> <strong> About:</strong> Advancements in web-based technology and the proliferation of sensors and mobile devices interacting with the internet have resulted in immense data management requirements. These data management activities include storage, processing, demand of high-performance read-write operations of big data. Large-scale and high-concurrency applications like SNS and search engines have appeared to be facing challenges in using the relational database to store and query dynamic user data. NoSQL and cloud computing has emerged as a paradigm that could meet these requirements. The available diversity of existing NoSQL and cloud computing solutions make it difficult to comprehend the domain and choose an appropriate solution for a specific business task. Therefore, this chapter reviews NoSQL and cloud-system-based solutions with the goal of providing a perspective in the field of data storage technology/algorithms, leveraging guidance to researchers and practitioners to select the best-fit data store, and identifying challenges and opportunities of the paradigm.</p>
 
 	</div>
+<p>Product Analysis Blogs </p>
+</div>
+<div class="row">
+	<div class="col-sm-5">
+	<img alt="Nabeel Siddiqui" src="/img/book4.png">
+	<div class="row"> 
+		
+		<a class="col-sm-12" target = "_blank" href="https://www.linkedin.com/pulse/cisco-acquires-cloudcherry-nabeel-siddiqui/"></i> LinkedIn Article</a>
+	</div>
+	</div>
+	<div class="col-sm-7">
+	<p> Cisco Acuires CloudCherry</p>
+
+	<p> <strong> About:</strong> Cisco Acquires CX Management firm CloudCherry. My analysis of this merger</p>
+
+	</div>
+</div>
+</div>
+<div class="row">
+	<div class="col-sm-5">
+	<img alt="Nabeel Siddiqui" src="/img/book5.png">
+	<div class="row"> 
+		
+		<a class="col-sm-12" target = "_blank" href="https://www.linkedin.com/pulse/oracles-innovative-cloud-solution-mexican-smes-nabeel-siddiqui/"></i> LinkedIn Article</a>
+	</div>
+	</div>
+	<div class="col-sm-7">
+	<p> Oracle’s Innovative Cloud Solution for Mexican SME's</p>
+
+	<p> <strong> About:</strong> My analysis on Oracle's strategy of targetting SME's in Mexico</p>
+
+	</div>
+</div>
+</div>
+<div class="row">
+	<div class="col-sm-5">
+	<img alt="Nabeel Siddiqui" src="/img/book6.png">
+	<div class="row"> 
+		
+		<a class="col-sm-12" target = "_blank" href="https://www.linkedin.com/pulse/ge-electric-investing-wind-power-business-nabeel-siddiqui/"></i> LinkedIn Article</a>
+	</div>
+	</div>
+	<div class="col-sm-7">
+	<p> GE Electric is investing in Wind Power Business</p>
+
+	<p> <strong> About:</strong> My Analysis on GE's investment in Wind Power Business and colloborating with Wind Farms</p>
+
+	</div>
+</div>
+</div>
+<div class="row">
+	<div class="col-sm-5">
+	<img alt="Nabeel Siddiqui" src="/img/book7.png">
+	<div class="row"> 
+		
+		<a class="col-sm-12" target = "_blank" href="https://www.linkedin.com/pulse/cisco-webex-enhanced-security-without-compromising-user-siddiqui/"></i>LinkedIn Article</a>
+	</div>
+	</div>
+	<div class="col-sm-7">
+	<p> Cisco WebEx – Enhanced security without Compromising User Experience</p>
+
+	<p> <strong> About:</strong> My Analysis on how Cisco enhanced the WebEx Security without compromising on the Value Proposition and USer Experience</p>
+
+	</div>
+</div>
+</div>
+<div class="row">
+	<div class="col-sm-5">
+	<img alt="Nabeel Siddiqui" src="/img/book8.png">
+	<div class="row"> 
+		
+		<a class="col-sm-12" target = "_blank" href="https://www.igi-global.com/chapter/comparison-study-of-different-nosql-and-cloud-paradigm-for-better-data-storage-technology/204276"></i> IGI Global Journal</a>
+	</div>
+	</div>
+	<div class="col-sm-7">
+	<p> Canon’s crowdfunded "tiny"​ camera – Ivy Rec</p>
+
+	<p> <strong> About:</strong> My Analysis on how Cisco crowdfunded a robust backpack camera to test the waters in the market</p>
+
+	</div>
 </div>
 </div>
 
