--- a/book/index.html
+++ b/book/index.html
@@ -64,7 +64,7 @@
 	<p> <strong> About:</strong> Advancements in web-based technology and the proliferation of sensors and mobile devices interacting with the internet have resulted in immense data management requirements. These data management activities include storage, processing, demand of high-performance read-write operations of big data. Large-scale and high-concurrency applications like SNS and search engines have appeared to be facing challenges in using the relational database to store and query dynamic user data. NoSQL and cloud computing has emerged as a paradigm that could meet these requirements. The available diversity of existing NoSQL and cloud computing solutions make it difficult to comprehend the domain and choose an appropriate solution for a specific business task. Therefore, this chapter reviews NoSQL and cloud-system-based solutions with the goal of providing a perspective in the field of data storage technology/algorithms, leveraging guidance to researchers and practitioners to select the best-fit data store, and identifying challenges and opportunities of the paradigm.</p>
 
 	</div>
-<p>Product Analysis Blogs </p>
+<p> <strong> Product Analysis Blogs </p>
 </div>
 <div class="row">
 	<div class="col-sm-5">
