--- a/book/index.html
+++ b/book/index.html
@@ -1,4 +1,11 @@
-
+---
+layout: default
+title: Nabeel Siddiqui
+cv: passive
+notes: passive
+contact: passive
+description: Nabeel Siddiqui is a Master of Engineering Management candidate at Duke University. His passion includes creating and managing Successful and Challenging Products.
+---
 <div class="jumbotron"> 
 <div class="row">
 	<div class="col-sm-5">
