--- a/book/index.html
+++ b/book/index.html
@@ -6,6 +6,15 @@ notes: passive
 contact: passive
 description: Nabeel Siddiqui is a Master of Engineering Management candidate at Duke University. His passion includes creating and managing Successful and Challenging Products.
 ---
+  
+<div class="header">
+	<ul class="nav nav-pills pull-right">
+ 		<li class="{{ page.book }}"><a href="/book" title="Book">Published Books and Articles</a></li> 
+		<li class="{{ page.cv }}"><a target = "_blank" href="/files/NabeelSiddiquiResume.pdf" title="Download CV as PDF">Resume</a></li>
+	</ul>
+	<h3 class="text-muted"><a href="/">Nabeel Siddiqui</a></h3>
+	</div> <!-- /header -->
+
 <div class="jumbotron"> 
 <div class="row">
 	<div class="col-sm-5">
