--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ description: Nabeel Siddiqui is a Master of Engineering Management candidate at 
 	<p class="lead">Hi, I'm <span itemprop="name">Nabeel</span>, pursuing Master of Engineering Management and specializing in Product Management at Duke University.
 	</p>
 		<p>
-		<b> Background </b> <br><br>
+		<b> Profile </b> <br><br>
 I aspire to build products that customers love by serving the core value proposition while maintaining the highest customer experience. I have 5 years of product experience and my roles spanned across gathering requirements, creating product roadmap, to delivering and selling the finished products. I am a firm believer of “Building Bridges, Not Silos” and I have been fortunate enough to conceptualize and build very successful products that solved interesting use-cases. I have a knack for learning and implementing new processes and my love for technology motivates me to blog, publish books and journals to multiple forums. My alacrity to strive for excellence earned me titles such as: “Innovator of the Year,” “Top 50 Tech Visionaries,” “Top 6 Innovative Minds.”<br>
 		<br> <b> Skill Highlights </b><br>
 		<ol> <li><b>Problem Solving</b> - Nabeel is an expert in problem-solving as he invented a simplified compare simulation concept for comparing the performance for physical assets using feature prioritization, divide and conquer and mental models. This simplification led to the on-boarding of one the biggest clients in Europe.</li>
