--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@ contact: passive
 description: Nabeel Siddiqui is a Master of Engineering Management candidate at Duke University. His passion includes creating and managing Successful and Challenging Products.
 ---
 <!-- <div class="jumbotron"> -->
+<head> <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-156095548-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-156095548-1');
+</script>
+	</head>
 <div class="row">
 	<div align="left" class="col-sm-4">
 	<img  class="img-rounded avatar" width="220" height"121" alt="Nabeel Siddiqui" src="img/profile.jpg">
