--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ description: Nabeel Siddiqui is a Master of Engineering Management candidate at 
 		<a target="_blank" class="col-sm-3" href="http://www.linkedin.com/in/mdnabeelsiddiqui/"><i class="fa fa-linkedin fa-2x"></i></a>
 		<a target="_blank" class="col-sm-3" href="https://www.facebook.com/nabeelsiddiqui111"><i class="fa fa-facebook-square fa-2x"></i></a><br><br>
 		<iframe width="250" height="250" src="https://www.youtube.com/embed/zq5XH1Y2hRo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
-		<p> Featured in SAP's Innovator of the Year Video, 2017</p>
+		<p> Featured in Innovator@SAP Video, 2017</p>
 	</div>
 	</div>
 	<div class="col-sm-8" text-align="justify">
@@ -34,7 +34,7 @@ description: Nabeel Siddiqui is a Master of Engineering Management candidate at 
 	</p>
 		<p>
 		<b> Profile </b> <br><br>
-I aspire to build products that customers love by serving the core value proposition while maintaining the highest customer experience. I have 5 years of product experience and my roles spanned across gathering requirements, creating product roadmap, to delivering and selling the finished products. I am a firm believer of “Building Bridges, Not Silos” and I have been fortunate enough to conceptualize and build very successful products that solved interesting use-cases. I have a knack for learning and implementing new processes and my love for technology motivates me to blog, publish books and journals to multiple forums. My alacrity to strive for excellence earned me titles such as: “Innovator of the Year,” “Top 50 Tech Visionaries,” “Top 6 Innovative Minds.”<br>
+I aspire to build products that customers love by serving the core value proposition while maintaining the highest customer experience. I have 5 years of product experience and my roles spanned across gathering requirements, creating product roadmap, to delivering and selling the finished products. I am a firm believer of “Building Bridges, Not Silos” and I have been fortunate enough to conceptualize and build very successful products that solved interesting use-cases. I have a knack for learning and implementing new processes and my love for technology motivates me to blog, publish books and journals to multiple forums. My alacrity to strive for excellence earned me titles such as: “Customer Centricity,” “Excellence in Innovation,” “Top 6 Innovative Application.”<br>
 		<br> <b> Skill Highlights </b><br>
 		<ol> <li><b>Problem Solving</b> - Nabeel is an expert in problem-solving as he invented a simplified compare simulation concept for comparing the performance for physical assets using feature prioritization, divide and conquer and mental models. This simplification led to the on-boarding of one the biggest clients in Europe.</li>
 	<li><b>Product Management</b>- Nabeel has experience in driving ideas to products.  He has worked in projects like Predictive Engineering Insights, HooP, Smart Parking from their inception and used mind mapping, Design thinking, User Experience, User Interviews, and Advanced Development methodologies to deliver a profitable product. The key to success was his emphasis on scalable design, and quality over quantity approach.</li>
