--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ description: Nabeel Siddiqui is a Master of Engineering Management candidate at 
 	</head>
 <div class="row">
 	<div align="left" class="col-sm-4">
-	<img  class="img-rounded avatar" width="220" height"121" alt="Nabeel Siddiqui" src="img/profile.jpg">
+	<img  class="img-rounded avatar" width="220" height="150" alt="Nabeel Siddiqui" src="img/profile.jpg">
 	<div class="row">
 		<a target="_blank" class="col-sm-3" href="http://github.com/mnscodes"><i class="fa fa-github fa-2x"></i></a>
 		<a target="_blank" class="col-sm-3" href="https://twitter.com/nabeel1591"><i class="fa fa-twitter fa-2x"></i></a>
