--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ description: Nabeel Siddiqui is a Master of Engineering Management candidate at 
 	</div>
 	</div>
 	<div class="col-sm-8" text-align="justify">
-	<p class="lead">Hi, I'm <span itemprop="name">Nabeel</span>, pursuing Master of Engineering Management and specializing in Product Management at Duke University. I have spent my glorious 5 years at SAP where I learned how to help customers "Run Simple"
+	<p class="lead">Hi, I'm <span itemprop="name">Nabeel</span>, working as a Director of S/4HANA Solution Management at SAP. We help customers RISE with SAP and RUN Simple
 	</p>
 		<p>
 		<b> Profile </b> <br><br>
