--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ description: Nabeel Siddiqui is a Master of Engineering Management candidate at 
 	</div>
 	</div>
 	<div class="col-sm-8" text-align="justify">
-	<p class="lead">Hi, I'm <span itemprop="name">Nabeel</span>, working as a Director of S/4HANA Solution Management at SAP. We help customers RISE with SAP and RUN Simple. I am a DUKE Graduate and I specialize in Product and Strategy 
+	<p class="lead">Hi, I'm <span itemprop="name">Nabeel</span>, working as the Global Director - Products & Tech for Innovation and Incubation Hub at SAP. We help customers RISE with SAP and RUN Simple. I am a DUKE Graduate and I specialize in Product and Strategy 
 	</p>
 		<p>
 		<b> Profile </b> <br><br>
